feat: add new friends model and create table

--- a/app/views/partials/_header.html.erb
+++ b/app/views/partials/_header.html.erb
@@ -14,7 +14,10 @@
             <%= link_to "About", home_about_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Friend List</a>
+          <%= link_to "Show List", friends_path, class: "nav-link" %>
+          </li>
+          <li class="nav-item">
+          <%= link_to "Add Friend", new_friend_path, class: "nav-link" %>
           </li>
         </ul>
       </div>
