--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -1,9 +1,7 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Friends</h1>
-
-<table>
-  <thead>
+<table class="table table-striped table-bordered table-hover">
+  <thead class="table-dark">
     <tr>
       <th>First name</th>
       <th>Last name</th>
@@ -22,9 +20,9 @@
         <td><%= friend.email %></td>
         <td><%= friend.phone %></td>
         <td><%= friend.twitter %></td>
-        <td><%= link_to 'Show', friend %></td>
-        <td><%= link_to 'Edit', edit_friend_path(friend) %></td>
-        <td><%= link_to 'Destroy', friend, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', friend, class: 'btn' %></td>
+        <td><%= link_to 'Edit', edit_friend_path(friend), class: 'btn' %></td>
+        <td><%= link_to 'Destroy', friend, class: 'btn btn-outline-danger', method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -32,4 +30,4 @@
 
 <br>
 
-<%= link_to 'New Friend', new_friend_path %>
+<%= link_to 'New Friend', new_friend_path, class: 'btn btn-outline-success' %>
