--- a/app/views/friends/show.html.erb
+++ b/app/views/friends/show.html.erb
@@ -1,29 +1,13 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>First name:</strong>
-  <%= @friend.first_name %>
-</p>
+<div class="card border-success mb-3" style="max-width: 18rem;">
+  <div class="card-body text-success">
+    <h3 class="card-title"><%= @friend.first_name %> <%= @friend.last_name %></h5>
+    <p class="card-text"><strong>Email:</strong><%= @friend.email %></p>
+    <p class="card-text"><strong>Phone:</strong><%= @friend.phone %></p>
+    <p class="card-text"><strong>Twitter:</strong><%= @friend.twitter %></p>
 
-<p>
-  <strong>Last name:</strong>
-  <%= @friend.last_name %>
-</p>
-
-<p>
-  <strong>Email:</strong>
-  <%= @friend.email %>
-</p>
-
-<p>
-  <strong>Phone:</strong>
-  <%= @friend.phone %>
-</p>
-
-<p>
-  <strong>Twitter:</strong>
-  <%= @friend.twitter %>
-</p>
-
-<%= link_to 'Edit', edit_friend_path(@friend) %> |
-<%= link_to 'Back', friends_path %>
+    <%= link_to 'Edit', edit_friend_path(@friend), class: 'btn btn-outline-success' %>
+    <%= link_to 'Back', friends_path, class: 'btn btn-outline-success' %>
+  </div>
+</div>
