style: add Bootstrap styles

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,12 @@
   <body>
     <%= render 'partials/header' %>
     <div class="container">
+      <br/>
+
+      <% if notice %>
+        <%= render 'partials/alert' %>
+      <% end %>
+
       <%= yield %>
     </div>
 
