--- a/app/views/friends/_form.html.erb
+++ b/app/views/friends/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with(model: friend) do |form| %>
   <% if friend.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(friend.errors.count, "error") %> prohibited this friend from being saved:</h2>
+      <h2><%= pluralize(friend.errors.count, 'error') %> prohibited this friend from being saved:</h2>
 
       <ul>
         <% friend.errors.each do |error| %>
@@ -11,32 +11,34 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="field mb-3 form-floating">
+    <%= form.text_field :first_name, class: 'form-control', placeholder: 'First Name' %>
     <%= form.label :first_name %>
-    <%= form.text_field :first_name %>
   </div>
 
-  <div class="field">
+  <div class="field mb-3 form-floating">
+    <%= form.text_field :last_name, class: 'form-control', placeholder: 'Last Name' %>
     <%= form.label :last_name %>
-    <%= form.text_field :last_name %>
   </div>
 
-  <div class="field">
+  <div class="field mb-3 form-floating">
+    <%= form.email_field :email, class: 'form-control', placeholder: 'user@email.com' %>
     <%= form.label :email %>
-    <%= form.text_field :email %>
   </div>
 
-  <div class="field">
+  <div class="field mb-3 form-floating">
+    <%= form.telephone_field :phone, class: 'form-control', placeholder: '07712345678' %>
     <%= form.label :phone %>
-    <%= form.number_field :phone %>
   </div>
 
-  <div class="field">
+  <div class="field mb-3 form-floating">
+    <%= form.text_field :twitter, class: 'form-control', placeholder: 'username' %>
     <%= form.label :twitter %>
-    <%= form.text_field :twitter %>
   </div>
 
+  <br/>
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit class: 'btn btn-outline-success' %>
   </div>
+  
 <% end %>
