--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <table class="table table-striped table-bordered table-hover">
   <thead class="table-dark">
     <tr>
@@ -20,8 +18,8 @@
         <td><%= friend.email %></td>
         <td><%= friend.phone %></td>
         <td><%= friend.twitter %></td>
-        <td><%= link_to 'Show', friend, class: 'btn' %></td>
-        <td><%= link_to 'Edit', edit_friend_path(friend), class: 'btn' %></td>
+        <td><%= link_to 'Show', friend, class: 'btn btn-outline-success' %></td>
+        <td><%= link_to 'Edit', edit_friend_path(friend), class: 'btn btn-outline-success' %></td>
         <td><%= link_to 'Destroy', friend, class: 'btn btn-outline-danger', method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
